--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="">
     <header>
       <h1>
         <a href="/">Bella Ruby Jewelry</a>
@@ -18,7 +18,7 @@
         {{#if loggedIn}}
         <a href="">Create a Ring</a>
         <a href="/dashboard">Dashboard</a>
-        <button id="logout" class="btn-no-style">Logout</button>
+        <button id="logout" class="">Logout</button>
         {{else}}
         <a href="/login">Login</a>
         {{/if}}
