--- a/views/ring-creator.hbs
+++ b/views/ring-creator.hbs
@@ -1,41 +1,5 @@
-.dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
-
 {{! Container for ring creator tool }}
-<div class="ring-creator">
+<form class="ring-creator">
   <h1>Personalize your ring by choosing from the options below</h1>
   <div class="ring-options">
     <div class="dropdown band-options">
@@ -56,4 +20,4 @@
       </div>
     </div>
   </div>
-</div>
+</form>
