added some styling and destination pathing to main and landing handlebars

--- a/public/stylesheets/style-landing.css
+++ b/public/stylesheets/style-landing.css
@@ -52,11 +52,14 @@
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: center;
+  color: white;
 }
 
 .logo {
   text-transform: uppercase;
   cursor: pointer;
+  text-decoration: none;
+  color: white;
 }
 
 .nav {
