--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bella Ruby Jewelry</title>
+  <title>Bella Ruby Jewelry - Customer Rings</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -12,6 +16,7 @@
   <div class="">
     <header>
       <h1>
+        <img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img>
         <a href="/">Bella Ruby Jewelry</a>
       </h1>
       <nav>
@@ -36,13 +41,15 @@
 </body>
     <footer>
       <div>
-      Contact Us <br/ >
-      <a href="https://www.instagram.com/accounts/login/?next=/bellarubyjewelry/" class="">Instagram</a><br />
-      <a href="mailto:lissdiaz@gmail.com" class="">Email Us</a> 
+        Contact Us <br/ >
+        <a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a><br/>
+        <a href="mailto:s21nichols@hotmail.com" class="">Email Us</a> 
       </div><br/ >
       <div>
       Shop <br />
-      <a href="https://www.bellarubyjewelry.com/shop" class="">Check out some of our items</a>
+        <a href="https://www.bellarubyjewelry.com/">bellarubyjewelry.com</a>
+        <a href="https://www.etsy.com/shop/BellaRubyJewelry"><i class="fab fa-etsy fa-2x"></i></a><br/>
+        <a href="https://www.instagram.com/bellarubyjewelry/?hl=en"><i class="fas fa-camera fa-2x"></i></a>
       </div>
     </footer>
 
