--- a/views/partials/ring-info.handlebars
+++ b/views/partials/ring-info.handlebars
@@ -6,6 +6,6 @@
   <div class="meta">
     {{!-- Ring rendered with usernane of creator and date of creation--}} by {{user.username}} on {{format_date created_at}}
     |
-    <a href="/ring/{{id}}" src="">{{!--ring image needs to display here--}}</a>
+    <a href="/rings/{{id}}" src="">{{!--ring image needs to display here--}}</a>
   </div>
 </article>
