--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -16,7 +16,7 @@
     <header>
       <div class="brand">
         <a href="/"><img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img></a>
-        <h2 class="logo"><a href="/">Bella Ruby Jewelry</a></h2>
+        <h2 class="logo"><a href="/" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
         <h3>Menu</h3>
@@ -31,7 +31,7 @@
     <div class="text">
       <h2>Ring Builder</h2>
       <h3>Custom jewelry pieces. Designed by you.</h3>
-      <a href="/dashboard">Start Building!</a>
+      <a href="/login">Start Building!</a>
     </div>
 
     <ul class="social">
@@ -45,12 +45,10 @@
 
   <div class="menu">
     <ul>
-      <li><a href="/login">Register</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/login">Login/Register</a></li>
+      <li><a href="/dashboard", withAuth >Dashboard</a></li>
       <li><a href="#">Create a Ring</a></li>
-      <li><a href="/rings">My Collection</a></li>
-      <li><a href="mailto:lissdiaz@gmail.com" class="">Contact Us</a></li>
+      <li><a href="mailto:s21nichols@hotmail.com" class="">Contact Us</a></li>
     </ul>
   </div>
 
