styled main and updated landing handlebar pages

--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -19,20 +19,16 @@
         <h2 class="logo"><a href="/" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
-        <h3>Menu</h3>
+        <h2>Menu</h2>
         <div class="toggle"></div>
       </div>
     </header>
 
-    <img class="background" src="/images/landing-video_Moment.jpg"></img>
+    <img class="background" src="/images/ring-book.png"></img>
 
     <div class="overlay"></div>
 
-    <div class="text">
-      <h2>Ring Builder</h2>
-      <h3>Custom jewelry pieces. Designed by you.</h3>
-      <a href="/login">Start Building!</a>
-    </div>
+      {{{ body }}}
 
     <ul class="social">
       <li><a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a></li>
