--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -16,23 +16,19 @@
     <header>
       <div class="brand">
         <a href="/"><img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img></a>
-        <h2 class="logo"><a href="/">Bella Ruby Jewelry</a></h2>
+        <h2 class="logo"><a href="/" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
-        <h3>Menu</h3>
+        <h2>Menu</h2>
         <div class="toggle"></div>
       </div>
     </header>
 
-    <img class="background" src="/images/landing-video_Moment.jpg"></img>
+    <img class="background" src="/images/ring-book.png"></img>
 
     <div class="overlay"></div>
 
-    <div class="text">
-      <h2>Ring Builder</h2>
-      <h3>Custom jewelry pieces. Designed by you.</h3>
-      <a href="/dashboard">Start Building!</a>
-    </div>
+      {{{ body }}}
 
     <ul class="social">
       <li><a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a></li>
@@ -45,12 +41,10 @@
 
   <div class="menu">
     <ul>
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/login">Register</a></li>
-      <li><a href="/login">Login</a></li>
+      <li><a href="/login">Login/Register</a></li>
+      <li><a href="/dashboard", withAuth >Dashboard</a></li>
       <li><a href="#">Create a Ring</a></li>
-      <li><a href="/rings">My Collection</a></li>
-      <li><a href="mailto:lissdiaz@gmail.com" class="">Contact Us</a></li>
+      <li><a href="mailto:s21nichols@hotmail.com" class="">Contact Us</a></li>
     </ul>
   </div>
 
