--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,48 +8,50 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style-main.css">
 </head>
-
 <body>
-  <div class="">
+  <section class="showcase">
     <header>
-      <h1>
+      <div class="brand">
         <img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img>
-        <a href="/">Bella Ruby Jewelry</a>
-      </h1>
-      <nav>
-        {{#if loggedIn}}
-        <a href="">Create a Ring</a>
-        <a href="/dashboard">Dashboard</a>
-        <button id="logout" class="">Logout</button>
-        {{else}}
-        <a href="/login">Login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main>
-     {{{ body }}}
-    </main>
-    
-  </div>
-  
-  {{#if loggedIn}}
-  <script src="/javascript/logout.js"></script>
-  {{/if}}
-</body>
-    <footer>
-      <div>
-        Contact Us <br/ >
-        <a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a><br/>
-        <a href="mailto:s21nichols@hotmail.com" class="">Email Us</a> 
-      </div><br/ >
-      <div>
-      Shop <br />
-        <a href="https://www.bellarubyjewelry.com/">bellarubyjewelry.com</a>
-        <a href="https://www.etsy.com/shop/BellaRubyJewelry"><i class="fab fa-etsy fa-2x"></i></a><br/>
-        <a href="https://www.instagram.com/bellarubyjewelry/?hl=en"><i class="fas fa-camera fa-2x"></i></a>
+        <h2><a class='logo' href="/">Bella Ruby Jewelry</a></h2>
       </div>
-    </footer>
+      {{#if loggedIn}}
+      <div class="nav">
+        <h3><a href="/build">Build a Ring</a></h3>
+        <h3><a href="/dashboard">Dashboard</a></h3>
+        <button id="logout" type="button" class="btn btn-outline-light">Logout</button>
+      </div>
+      {{else}}
+      <div class="nav">
+        <h2><a href="/login">Login</a></h2>
+      </div>
+      {{/if}}
+    </header>
 
+    <img class="background" src="/images/ring-stump.png"></img>
+
+    <div class="overlay"></div>
+
+    <main class="container">
+      {{{ body }}}
+    </main> 
+
+    {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+    {{/if}}
+
+    <ul class="social">
+      <li><a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="https://www.instagram.com/bellarubyjewelry/?hl=en"><i class="fas fa-camera fa-2x"></i></a></li>
+      <li><a href="https://www.etsy.com/shop/BellaRubyJewelry"><i class="fab fa-etsy fa-2x"></i></a></li>
+      <li><a href="https://www.bellarubyjewelry.com/">bellarubyjewelry.com</a></li>
+      <li><a href="mailto:s21nichols@hotmail.com" class="">Contact Us</a></li>
+    </ul>
+  </section>
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </html>
