--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -16,7 +16,7 @@
     <header>
       <div class="brand">
         <a href="/"><img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img></a>
-        <h2 class="logo"><a href="/" class="logo">Bella Ruby Jewelry</a></h2>
+        <h2 class="logo"><a href="/landing" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
         <h2>Menu</h2>
