--- a/views/ring-creator.hbs
+++ b/views/ring-creator.hbs
@@ -3,8 +3,8 @@
   <h1>Personalize your ring by choosing from the options below</h1>
   <div class="ring-options">
     <div class="dropdown band-options">
-      <button class="dropbtn">Band</button>
-      <div class="dropdown-content">
+      <button class="dropbtn" >Band</button>
+      <div class="dropdown-content" id= "band-selection">
         <a href="#">Gold</a>
         <a href="#">Silver</a>
         <a href="#">Decorative</a>
@@ -13,7 +13,7 @@
 
     <div class="dropdown stone-options">
       <button class="dropbtn">Stone</button>
-      <div class="dropdown-content">
+      <div class="dropdown-content" id= "stone-selection">
         <a href="#">Black Onyx</a>
         <a href="#">Rainbow Moonstone</a>
         <a href="#">Turquoise</a>
