--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -15,7 +15,7 @@
   <section class="showcase">
     <header>
       <div class="brand">
-        <a href="/"><img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img></a>
+        <a href="/landing"><img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img></a>
         <h2 class="logo"><a href="/landing" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
