--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
 <h1>New to Ring Builder? Create an account</h1>
 <form class="signup-form">
   <fieldset class="form-fields">
-      <label for="username-signup">Name:</label>
+      <label for="username-signup">Username:</label>
       <input type="text" id="username-signup" placeholder="John Smith"/>
 
       <label for="email-signup">Email:</label>
