Create ring button added

--- a/views/ring-creator.hbs
+++ b/views/ring-creator.hbs
@@ -19,5 +19,8 @@
         <a href="#">Turquoise</a>
       </div>
     </div>
+    <div>
+      <button type="submit" id= "create-button">Create Ring</button>
+    </div>
   </div>
 </form>
