--- a/public/stylesheets/style-login.css
+++ b/public/stylesheets/style-login.css
@@ -80,6 +80,18 @@ h1 {
   margin-top: 10px;
   font-size: 1.7em;
   border-radius: 2px;
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+}
+
+.button-logout {
+  border-color: white;
+  background-color: grey;
+  font-size: .8rem;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  padding-top: 1px;
+  border-radius: 2px;
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
 label {
@@ -100,12 +112,14 @@ input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus {
   background-color: white;
   border-color: grey;
   border-radius: 2px;
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
 .signup-form input {
   background-color: white;
   border-color: grey;
   border-radius: 2px;
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
 .nav {
@@ -130,6 +144,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus {
 
 #logout {
   font-size: 20px;
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
 .background{
