added sizes and title form

--- a/views/ring-creator.hbs
+++ b/views/ring-creator.hbs
@@ -3,7 +3,7 @@
   <h1>Personalize your ring by choosing from the options below</h1>
   <div class="ring-options">
     <div class="dropdown band-options">
-      <button class="dropbtn" >Band</button>
+      <button class="dropbtn">Band</button>
       <div class="dropdown-content" id= "band-selection">
         <a href="#">Gold</a>
         <a href="#">Silver</a>
@@ -19,6 +19,22 @@
         <a href="#">Turquoise</a>
       </div>
     </div>
+    <div class="dropdown ring-size">
+            <button class="dropbtn">Ring Size</button>
+      <div class="dropdown-content" id= "size-selection">
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">7</a>
+        <a href="#">8</a>
+        <a href="#">9</a>
+        <a href="#">10</a>
+        <a href="#">11</a>
+        <a href="#">12</a>
+    </div>
+    <div> <label class="form-labels" for="title">Give Your Ring A Name</label>
+      <input type="text" id="ring-title" placeholder="Engagement" /></div>
     <div>
       <button type="submit" id= "create-button">Create Ring</button>
     </div>
