ring size and title added

--- a/views/ring-creator.handlebars
+++ b/views/ring-creator.handlebars
@@ -5,6 +5,23 @@
   </div>
 
   {{!-- Form for ring title and size and any other data needed for the final render to go here --}}
+  <div class="dropdown ring-size">
+    <button class="dropbtn">Ring Size</button>
+      <div class="dropdown-content" id= "size-selection">
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">7</a>
+        <a href="#">8</a>
+        <a href="#">9</a>
+        <a href="#">10</a>
+        <a href="#">11</a>
+        <a href="#">12</a>
+    </div>
+    <div> <label class="form-labels" for="title">Give Your Ring A Name</label>
+      <input type="text" id="ring-title" placeholder="Engagement" /></div>
+    <div>
 
   <div class="wrapper">
     <div class="menu">
