framework for final render page

--- a/views/final-render.handlebars
+++ b/views/final-render.handlebars
@@ -1,1 +1,12 @@
+<div id="ring-order-form">
+<h1>{{title}} Designed by {{username}} </h1>
 {{!-- Insert image of final ring here --}}
+<li>
+    {{stone}}
+    {{band}}
+    {{size}}
+    {{email}}
+    {{phone}}
+</li>
+
+</div>
