added button class for styling

--- a/views/final-render.handlebars
+++ b/views/final-render.handlebars
@@ -17,6 +17,6 @@
         {{phone}}
       </li>
     </ul>
-    <button onclick="window.print()">Print Ring Details</button>
+    <button class ="button" onclick="window.print()">Print Ring Details</button>
   </div>
 </div>
