--- a/views/final-render.handlebars
+++ b/views/final-render.handlebars
@@ -2,7 +2,7 @@
   <h1>{{title}} Designed by {{username}} </h1>
   {{! Insert image of final ring here }}
   <div>
-    <ul id="pring-slip">
+    <ul id="print-slip">
       <li>
         Stone:
         {{stone}}
