js script element

--- a/views/final-render.handlebars
+++ b/views/final-render.handlebars
@@ -19,4 +19,5 @@
     </ul>
     <button class ="button" onclick="window.print()">Print Ring Details</button>
   </div>
+  <script>src="/javascript/ring-creator.js"</script>
 </div>
