--- a/views/layouts/ring-creator-layout.handlebars
+++ b/views/layouts/ring-creator-layout.handlebars
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"> 
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="/stylesheets/style-ring.css">
+  <link rel="stylesheet" href="/stylesheets/{{ style }}">
 </head>
 <body>
   <section class="showcase">
@@ -24,7 +24,7 @@
       {{#if loggedIn}}
       <div class="nav">
         <h3><a href="/build">Build a Ring</a></h3>
-        <h3><a href="/dashboard">Dashboard</a></h3>
+        <h3><a href="#">Dashboard</a></h3>
         <button id="logout" type="button" class="button-logout">Logout</button>
       </div>
       {{else}}
@@ -52,5 +52,6 @@
   </section>
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </html>
