--- a/public/stylesheets/style-ring.css
+++ b/public/stylesheets/style-ring.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'El Messiri', sans-serif;
+  font-family: "El Messiri", sans-serif;
   list-style: none;
 }
 
@@ -90,22 +90,22 @@
 .button-logout {
   border-color: white;
   background-color: grey;
-  font-size: .8rem;
+  font-size: 0.8rem;
   height: 2.8rem;
   line-height: 2.8rem;
   padding-top: 1px;
   border-radius: 2px;
-  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
 }
 
-.background{
+.background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.70;
+  opacity: 0.7;
 }
 
 .title-menu {
@@ -123,7 +123,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  text-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+  text-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
 }
 
 .page-title {
@@ -134,7 +134,6 @@
 .sub-title {
   font-size: 30px;
 }
-
 
 .wrapper {
   width: 80%;
@@ -152,7 +151,7 @@
   text-align: center;
   position: relative;
   line-height: 60px;
-  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
 }
 
 .menu ul li {
@@ -177,7 +176,7 @@
   width: 100%;
   left: 0;
   top: 60px;
-  box-shadow:  -5px 5px 7px rgba(0,0,0,0.7);
+  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
   top: 60px;
   padding: 25px 15px;
   display: flex;
@@ -187,13 +186,13 @@
 }
 
 .menu ul li:hover {
-  transition: .8s;
-  background: white
+  transition: 0.8s;
+  background: white;
 }
 
 .menu ul li:hover a {
-  transition: .8s;
-  color: rgb(65, 65, 65)
+  transition: 0.8s;
+  color: rgb(65, 65, 65);
 }
 
 .menu ul li:hover .sub-menu {
@@ -203,7 +202,7 @@
 .menu ul li .sub-menu .col img {
   width: 250px;
   height: 180px;
-  box-shadow:  -5px 5px 7px rgba(0,0,0,0.7);
+  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
   display: block;
   margin-left: 90px;
 }
@@ -218,11 +217,15 @@
   background-color: rgba(58, 65, 85);
   border-color: white;
   font-size: 2em;
-  padding-top:2px;
+  padding-top: 2px;
   border-radius: 2px;
-  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 70px;
+}
+
+.menu:hover #create-button {
+  display: block;
 }
 
 .button:hover {
@@ -237,7 +240,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 35px
+  left: 35px;
 }
 
 .social li {
@@ -253,19 +256,10 @@
 }
 
 .social li a:hover {
-  transform: scale(1.15)
+  transform: scale(1.15);
 }
 
-.button {
-  background-color: grey;
-  border-color: white;
-  margin-top: 10px;
-  font-size: 1.7em;
-  border-radius: 2px;
-  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
-}
-
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   .showcase,
   .showcase header {
     padding: 40px;
