--- a/views/partials/ringCreator.handlebars
+++ b/views/partials/ringCreator.handlebars
@@ -26,7 +26,7 @@
   <div class="wrapper">
     <div class="menu">
       <ul>
-        <li><a href="#">Bands</a>
+        <li class="options"><a href="#" >Bands</a>
           <div class="sub-menu">
             <div class="col">
               <img class="band-image" src="/images/gold-band.png" alt="Gold Ring Band">
@@ -42,18 +42,18 @@
             </div>
           </div>
         </li>
-        <li><a href="#">Stones</a>
+        <li class="options"><a href="#">Stones</a>
           <div class="sub-menu">
             <div class="col">
-              <img class="band-image" src="/images/black-onyx.png" alt="Black Onyx Round Stone">
+              <img class="stone-image" src="/images/black-onyx.png" alt="Black Onyx Round Stone">
               <p>This dramatic black stone comes in a variety of sizes and shapes.</p>
             </div>
             <div class="col">
-              <img class="band-image" src="/images/rainbow-moonstone.png" alt="Round Rainbow Moonstone">
+              <img class="stone-image" src="/images/rainbow-moonstone.png" alt="Round Rainbow Moonstone">
               <p>The Rainbow Moonstone is a whimcal stone with many healing properties.</p>
             </div>
             <div class="col">
-              <img class="band-image" src="/images/turquiose.png" alt="Turquiose Round Stone">
+              <img class="stone-image" src="/images/turquiose.png" alt="Turquiose Round Stone">
               <p>The turquiose stone is a classic look that can be fitted into any size or shape ring.</p>
             </div>
           </div>
