--- a/public/stylesheets/style-ring.css
+++ b/public/stylesheets/style-ring.css
@@ -140,78 +140,36 @@
   width: 80%;
 }
 
-.menu {
-  width: 100%;
-  height: 60px;
-}
-
-.menu ul {
-  width: 100%;
-  height: 100%;
-  background: rgb(58, 65, 85);
-  text-align: center;
-  position: relative;
-  line-height: 60px;
-  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
-}
-
-.menu ul li {
-  display: inline-block;
-  margin: 0 85px;
-  padding: 0 15px;
-}
-
-.menu ul li a {
-  text-decoration: none;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 5px;
-  font-size: 25px;
-  display: block;
-}
-
-.menu ul li .sub-menu {
-  position: absolute;
-  background-color: grey;
-  width: 100%;
-  left: 0;
-  top: 60px;
-  box-shadow:  -5px 5px 7px rgba(0,0,0,0.7);
-  top: 60px;
-  padding: 25px 15px;
+.col-container {
   display: flex;
-  justify-content: space-around;
-  line-height: 24px;
-  visibility: hidden;
-}
-
-.menu ul li:hover {
-  transition: .8s;
-  background: white
-}
-
-.menu ul li:hover a {
-  transition: .8s;
-  color: rgb(65, 65, 65)
-}
-
-.menu ul li:hover .sub-menu {
-  visibility: visible;
-}
-
-.menu ul li .sub-menu .col img {
-  width: 250px;
-  height: 180px;
-  box-shadow:  -5px 5px 7px rgba(0,0,0,0.7);
-  display: block;
-  margin-left: 90px;
-}
-
-.menu ul li .sub-menu p {
-  color: white;
+  width: 100%;
+  background:rgba(58, 65, 85);
   margin-top: 15px;
-  font-size: 20px;
+  font-size: 15px;
+}
+
+.selection-container {
+  display: flex;
+  width: 100%;
+}
+
+.col {
+  flex: 1;
+  padding: 16px;
+}
+
+img {
+  height: 60px;
+  width: 60px;
+}
+
+span {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+p {
+  padding-top: 10px;
 }
 
 .button {
@@ -221,7 +179,6 @@
   padding-top:2px;
   border-radius: 2px;
   box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
-  position: absolute;
   bottom: 70px;
 }
 
@@ -255,6 +212,17 @@
 .social li a:hover {
   transform: scale(1.15)
 }
+
+.form-text {
+  text-shadow: -5px 5px 7px rgba(0,0,0,0.7);
+  font-size: 20px;
+}
+
+::placeholder {
+  color: black;
+  opacity: 0.5;
+}
+
 
 @media(max-width: 768px) {
   .showcase,
