--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
       </div>
       {{else}}
       <div class="nav">
-        <h2><a href="/login">Login</a></h2>
+        <h2><a href="/login">Logout</a></h2>
       </div>
       {{/if}}
     </header>
