--- a/views/layouts/ring-creator-layout.handlebars
+++ b/views/layouts/ring-creator-layout.handlebars
@@ -29,6 +29,7 @@
       </div>
       {{else}}
       <div class="nav">
+        {{!-- sends back to login page with sign up sheet --}}
         <h2><a href="/login">Logout</a></h2>
       </div>
       {{/if}}
