--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
     <header>
       <div class="brand">
         <img class="logo-icon" src="/images/logo.png" alt="octopus logo"></img>
-        <h2><a class='logo' href="/landing">Bella Ruby Jewelry</a></h2>
+        <h2><a class='logo' href="/">Bella Ruby Jewelry</a></h2>
       </div>
       {{#if loggedIn}}
       <div class="nav">
