login design font larger

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,9 @@
         <button id="logout" type="button" class="button-logout">logout</button>
         </div>
       {{else}}
+      <p style="font-size:x-large">
           <a href="/login">login</a>
+      </p>
       {{/if}}
       </nav>
     </header>
