--- a/public/stylesheets/style-ring.css
+++ b/public/stylesheets/style-ring.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "El Messiri", sans-serif;
+  font-family: 'El Messiri', sans-serif;
   list-style: none;
 }
 
@@ -90,22 +90,22 @@
 .button-logout {
   border-color: white;
   background-color: grey;
-  font-size: 0.8rem;
+  font-size: .8rem;
   height: 2.8rem;
   line-height: 2.8rem;
   padding-top: 1px;
   border-radius: 2px;
-  box-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
+  box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
-.background {
+.background{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.7;
+  opacity: 0.70;
 }
 
 .title-menu {
@@ -123,10 +123,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  text-shadow: -5px 5px 7px rgba(0, 0, 0, 0.7);
-}
-
-input {
   text-shadow: -5px 5px 7px rgba(0,0,0,0.7);
 }
 
@@ -139,8 +135,10 @@ input {
   font-size: 30px;
 }
 
-.wrapper {
-  width: 80%;
+
+input[type="text"], input[type="number"] {
+  background-color : white;
+  font-size: 18px;
 }
 
 .col-container {
@@ -183,14 +181,10 @@ p {
   background-color: rgba(58, 65, 85);
   border-color: white;
   font-size: 2em;
-  padding-top: 2px;
+  padding-top:2px;
   border-radius: 2px;
   box-shadow: -5px 5px 7px rgba(0,0,0,0.7);
   bottom: 70px;
-}
-
-.menu:hover #create-button {
-  display: block;
 }
 
 .button:hover {
@@ -205,7 +199,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 35px;
+  left: 35px
 }
 
 .social li {
@@ -221,9 +215,8 @@ p {
 }
 
 .social li a:hover {
-  transform: scale(1.15);
+  transform: scale(1.15)
 }
-
 
 .form-text {
   text-shadow: -5px 5px 7px rgba(0,0,0,0.7);
@@ -232,7 +225,8 @@ p {
 
 ::placeholder {
   color: black;
-  opacity: 0.5;
+  opacity: 0.65;
+  font-size: 17px;
 }
 
 
