final ring sytling

--- a/views/ring-creator.handlebars
+++ b/views/ring-creator.handlebars
@@ -8,10 +8,10 @@
     <div class="selection-container">
       <div class="col">
         <label for="ring-size" class="form-text">Enter Ring Size (3-12)</label>
-        <input type="number" id="ring-size" placeholder="Enter your ring size" name="ring-size">
+        <input type="number" id="ring-size" placeholder="Enter your ring size here..." name="ring-size">
       </div>
       <div class="col">
-        <label class="form-text" for="ring-title">Give Your Ring A Name</label>
+        <label class="form-text" for="ring-title">Ring Project Title</label>
         <input type="text" id="ring-title" name="ring-title" placeholder="Enter your ring's name" />
       </div>
     </div>
@@ -20,41 +20,41 @@
           <h1>Bands</h1>
             <div>
               <img class="band-image" src="/images/gold-band.png" alt="Gold Ring Band">
-              <p><span>Gold</span> - All gold bands are a pure 25 Karat.  There are a number of widths and sytles to choose from.</p>
+              <p><span>1. Gold</span> - All gold bands are a pure 25 Karat.  There are a number of widths and sytles to choose from.</p>
             </div>
             <div class="">
               <img class="band-image" src="/images/silver-band.png" alt="Silver Ring Band">
-              <p><span>Silver</span> - All silver bands are Sterling .925 silver. There are a number of widths and sytles to choose from.</p>
+              <p><span>2. Silver</span> - All silver bands are Sterling .925 silver. There are a number of widths and sytles to choose from.</p>
             </div>
             <div class="">
               <img class="band-image" src="/images/decorative-band.png" alt="Decorative Ring Band">
-              <p><span>Decorative</span> - There are a variety of both gold and silver decorative bands. Custom decoartion options available, as well.</p>
+              <p><span>3. Decorative</span> - There are a variety of both gold and silver decorative bands. Custom decoartion options available, as well.</p>
             </div>
         </div>
         <div class="col select">
           <h1>Stones</h1>
             <div>
               <img class="stone-image" src="/images/black-onyx.png" alt="Black Onyx Round Stone">
-              <p><span>Black Onyx</span> - This dramatic black stone comes in a variety of sizes and shapes.</p>
+              <p><span>1. Black Onyx</span> - This dramatic black stone comes in a variety of sizes and shapes.</p>
             </div>
             <div class="">
               <img class="stone-image" src="/images/rainbow-moonstone.png" alt="Round Rainbow Moonstone">
-              <p><span>Rainbow Moonstone</span> - The Rainbow Moonstone is a whimcal stone with many healing properties.</p>
+              <p><span>2. Rainbow Moonstone</span> - The Rainbow Moonstone is a whimcal stone with many healing properties.</p>
             </div>
             <div class="">
               <img class="stone-image" src="/images/turquiose.png" alt="Turquoise Round Stone">
-              <p><span>Turquoise</span> - The turquoise stone is a classic look that can be fitted into any size or shape ring.</p>
+              <p><span>3. Turquoise</span> - The turquoise stone is a classic look that can be fitted into any size or shape ring.</p>
             </div>
         </div>
       </div>
     <div class="selection-container">
       <div class="col">
-       <label class="form-text" for="band">Band</label>
-        <input type="text" id="band" name="band" placeholder="ex. Gold" />
+       <label class="form-text" for="band">Band Number Choice</label>
+        <input type="text" id="band" name="band" placeholder="1, 2, or 3" />
       </div>
       <div class="col">
-       <label class="form-text"for="stone">Stone</label>
-       <input type="text" id="stone" name="stone" placeholder="ex. Black Onyx"/>
+       <label class="form-text"for="stone">Stone Number Choice</label>
+       <input type="text" id="stone" name="stone" placeholder="1, 2, or 3"/>
       </div>
     </div>
     <div>
