--- a/views/final-render.handlebars
+++ b/views/final-render.handlebars
@@ -18,13 +18,13 @@
   </div>
 
   <ol class="ring-list">
-    {{#each rings as |Ring|}}
+    {{!-- {{#each rings as |Ring|}}
       {{!-- <li>
         {{ring-creator}}
       </li> --}}
 
-    <img src={{image}} alt="">
-    {{/each}}
+    {{!-- <img src={{image}} alt="">
+    {{/each}} --}}
     <div>
       <ul id="print-slip">
         <li>
