--- a/views/ring-creator.handlebars
+++ b/views/ring-creator.handlebars
@@ -42,7 +42,7 @@
               <p><span>2. Rainbow Moonstone</span> - The Rainbow Moonstone is a whimcal stone with many healing properties.</p>
             </div>
             <div class="">
-              <img class="stone-image" src="/images/turquiose.png" alt="Turquoise Round Stone">
+              <img class="stone-image" src="/images/turquoise.png" alt="Turquoise Round Stone">
               <p><span>3. Turquoise</span> - The turquoise stone is a classic look that can be fitted into any size or shape ring.</p>
             </div>
         </div>
