fixed the username hardcode

--- a/views/final-render-page.handlebars
+++ b/views/final-render-page.handlebars
@@ -11,7 +11,7 @@
     
   <div class="title-section">
     <h1 class="title">First Ring</h1> 
-    <h3>Designed by John Doe</h3>
+    <h3>Designed by {{username}}</h3>
   </div>
   <div id="ring-order-form">
     
