some design change

--- a/views/ring-creator.handlebars
+++ b/views/ring-creator.handlebars
@@ -12,7 +12,7 @@
       </div>
       <div class="col">
         <label class="form-text" for="ring-title">Ring Project Title</label>
-        <input type="text" id="ring-title" name="ring-title" placeholder="Enter your ring's name" />
+        <input type="text" id="ring-title" name="ring-title" placeholder="My Custom Ring" />
       </div>
     </div>
       <div class="col-container">
