--- a/views/final-render-page.handlebars
+++ b/views/final-render-page.handlebars
@@ -10,7 +10,7 @@
   </header>
     
   <div class="title-section">
-    <h1 class="title">First Ring</h1> 
+    <h1 class="title">My Custom Ring</h1> 
     <h3>Designed by {{username}}</h3>
   </div>
   <div id="ring-order-form">
