adjusted ring title inpu

--- a/views/final-render-page.handlebars
+++ b/views/final-render-page.handlebars
@@ -10,8 +10,8 @@
   </header>
     
   <div class="title-section">
-    <h1 class="title">My Custom Ring</h1> 
-    <h3>Designed by {{username}}</h3>
+    <h1 class="title">{{ ring-title }}</h1> 
+    <h3>Designed by {{ username }}</h3>
   </div>
   <div id="ring-order-form">
     
